lb/envoy-proxy/envoy-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: grpc-lb-example
  name: envoy
spec:
  selector:
    app: envoy
  ports:
  - name: https
    protocol: TCP
    port: 50053
    targetPort: 8443
